--- a/templates/board.html
+++ b/templates/board.html
@@ -101,7 +101,7 @@
                                 //tr에 td테이블 추가 및 클래스 추가 + 텍스트 수정
                                 //$("<td></td>").text("a").addClass("view_btn").appendTo(tr);
                                 $("<td></td>").text(item.id).appendTo(tr);
-                                $("<td></td>").text(item.title).appendTo(tr);
+                                $("<td></td>").text(item.title).attr('id', item.id.toString()).attr('onclick', 'onclick_row(this)').appendTo(tr);
                                 $("<td></td>").text(item.writer).appendTo(tr);
                                 var dt = Date.parse(item.update_at)
                                 var date = new Date(dt)
@@ -134,6 +134,11 @@
                 }
             });
             }
+        }
+
+        function onclick_row(target)
+        {
+            window.location.href = "/board/detail?"+ "id=" +target.id.toString()
         }
 
         function onclick_page(target)
