--- a/templates/board_add.html
+++ b/templates/board_add.html
@@ -11,7 +11,7 @@
 
 {% block content %}
 <div class="wrapper">
-    <div class="two">
+    <div class="one">
         <span>writer</span>
         <input type="text" id="writer" name="writer" />
     </div>
