--- a/templates/post.html
+++ b/templates/post.html
@@ -23,16 +23,20 @@
                 <span>내용</span></br>
                 <textarea id="contents" name="contents" style="resize: none; width:50%; min-height:300px;" readonly></textarea>
             </div>
-            <div style="text-align: center; margin-top: 10px;">
-                <!-- <input type="button" id="SaveBtn" name="SaveBtn" value="Save" onclick="onclick_save();" class="btn"/> -->
-                <!-- <input type="button" id="BackBtn" name="BackBtn" value="Back" onclick="onclick_back();" class="btn"/> -->
+            <div id="comment">
             </div>
         </div>
     </body>
     <script>
-        var value = window.location.search
-        if (value.includes('id'))
-            get_boardinfo(value.split('=')[1])
+        var query = window.location.search
+        if (query.includes('id'))
+        {
+            var value = query.split('=')[1]
+            var data = value.split('-')
+            var postid = data[0]
+            var userid = data[1]
+            get_boardinfo(postid)
+        }
 
         function get_boardinfo(id)
         {
@@ -57,6 +61,19 @@
                             document.getElementById("create_at").value = item.create_at;
                             document.getElementById("title").value = item.title;
                             document.getElementById("contents").value = item.content;
+
+                            // if (item.comment_count > 0)
+                            // {
+                            //     for (var i = 0; i < item.comment_count; i++)
+                            //     {
+                            //         $("#comment").append(
+                            //             "<a id="+"'" + i.toString() +"' " +
+                            //             "name='" + "type" + "' " +
+                            //             ">" + 
+                            //             (i+1).toString() + "</a></br>"
+                            //             );
+                            //     }
+                            // }
                         }
                     }
                 },
