--- a/templates/post.html
+++ b/templates/post.html
@@ -32,10 +32,7 @@
         if (query.includes('id'))
         {
             var value = query.split('=')[1]
-            var data = value.split('-')
-            var postid = data[0]
-            var userid = data[1]
-            get_boardinfo(postid)
+            get_boardinfo(value)
         }
 
         function get_boardinfo(id)
@@ -61,19 +58,6 @@
                             document.getElementById("create_at").value = item.create_at;
                             document.getElementById("title").value = item.title;
                             document.getElementById("contents").value = item.content;
-
-                            // if (item.comment_count > 0)
-                            // {
-                            //     for (var i = 0; i < item.comment_count; i++)
-                            //     {
-                            //         $("#comment").append(
-                            //             "<a id="+"'" + i.toString() +"' " +
-                            //             "name='" + "type" + "' " +
-                            //             ">" + 
-                            //             (i+1).toString() + "</a></br>"
-                            //             );
-                            //     }
-                            // }
                         }
                     }
                 },
