--- a/templates/index.html
+++ b/templates/index.html
@@ -28,6 +28,7 @@
 
     <body>
         <header>
+            <!--- 메인 화면 헤더(네비 버튼) -->
             <div class="menu">
                 <div class="link">
                     <ul>
@@ -45,7 +46,7 @@
                     <span id="msg"> </span>
                     <button type="button" onclick="logout()">logout</button>
                 </div>
-            </div>
+            </div> <!--- 메인 화면 헤더(네비 버튼) 끝 -->
             {% block header %}
             {% endblock %}
         </header>
