--- a/templates/board_add.html
+++ b/templates/board_add.html
@@ -53,8 +53,11 @@
                 xhr.setRequestHeader("Authorization",token);
             },
             success: function (response) {
-                alert('success')
-                window.location.href = "/board"
+                if (response['resultCode'] == 200)
+                {
+                    alert('success')
+                    window.location.href = "/board"
+                }
             },
             error: function(xhr, exception) {
                 CommonErros(xhr, exception)
