--- a/templates/comment.html
+++ b/templates/comment.html
@@ -15,13 +15,6 @@
         <h3>댓글목록</h3>
         <div class="dat">
             <div class="dat_list" id="comment_list">
-                <div>
-                    <div id="userid">
-                        <b>ㅇㅇ</b>
-                    </div>
-                    <div id="content">ㅇㅇㅇㅇ</div>
-                    <div id="create_at" >ㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇ</div>        
-                </div>
             </div>
             <!--- 댓글 페이지 -->
             <div id='comment_page' style="text-align:center; margin-top:10px;">
@@ -136,7 +129,7 @@
                 success: function (response) {
                     var resultCode = response['resultCode'];
                     var resultMsg = response['resultMsg'];
-                    if (resultMsg == "Ok")
+                    if (resultCode == 200)
                     {
                         pageNum = pageNum == -1 ? 0 : pageNum;
                         get_commentinfo(pageNum, board.comment_page_limit, boardId)
