--- a/templates/register_user.html
+++ b/templates/register_user.html
@@ -52,8 +52,11 @@
                 },
                 success: function (response) {
                     var msg = response['resultMsg']
-                    alert(msg)
-                    window.location.href = "/index"
+                    if (response['resultCode'] == 200)
+                    {
+                        alert(msg)
+                        window.location.href = "/index"
+                    }
                 },
                 error: function(xhr, exception) {
                     console.log("error_status : " + xhr.status);
